# renpy-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
skill/: AI_GUIDE.md
src/renpy_mcp/: __init__.py  assets.py  build.py  config.py  executor.py  project.py  server.py
